Manifests/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: python
        image: finalcopy.azurecr.io/flaskapp:65
        ports:
        - containerPort: 5000
          name: http
      imagePullSecrets:
      - name: flaskapp
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer
  selector:
    app: flask
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
