Manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitnessappingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix  
        backend:
          service:
             name: flask
             port:
               number: 5000
